[package]
edition = "2021"
name = "websocket_chatroom"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.0", features = ["derive"]}
eyre = "0.6.8"
futures-channel = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
iced = {version = "0.8.0", features = ["tokio"]}
reqwest = "0.11.16"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.95"
tokio = {version = "1.27.0", features = ["net", "macros"]}
tokio-tungstenite = {version = "0.18.0", features = ["rustls-tls-webpki-roots"]}

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
[dev-dependencies]
tokio = {version = "1.27.0", features = ["rt", "net", "macros"]}

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
debug = 0
debug-assertions = false
opt-level = 3
[profile.release]
# lto = true
opt-level = 3
